build+ui: clean run task and fix logs table rounded corners